--- a/presentation/slides/standalone.adoc
+++ b/presentation/slides/standalone.adoc
@@ -1,1 +1,19 @@
 == Standalone
+
+=== Module
+
+image::images/module.png[]
+
+
+=== Standalone
+
+image::images/standalone.png[]
+
+=== Schematic Standalone
+
+[script]
+--
+ng generate @angular/core:standalone
+--
+
+=== Live coding
