--- a/presentation/slides/conclusion.adoc
+++ b/presentation/slides/conclusion.adoc
@@ -1,1 +1,28 @@
 == Conclusion
+
+
+=== [.conclusion-ng-next]#@ng-next ?#
+
+[%step]
+* Finalisation de la transition Zoneless
+* Forms with Signal
+* hydratation partielle
+* SelectorLess component
+
+[NOTE.speaker]
+--
+* Réécriture du compilateur ivy avec template pipeline
+* L'équipe d'Angular souhaite encore accélérer sur les évolutions du framework
+* sources
+** ng18 et hydratation partielle : https://blog.angular.dev/angular-v18-is-now-available-e79d5ac0affe
+** selectorless https://x.com/mgechev/status/1773493609461113003, https://dev.to/this-is-angular/episode-2420-angular-talks-at-google-io-jsworld-til-44b7
+--
+
+=== Questions ?
+
+* TODO QRCodes openfeadback, github
+
+[NOTE.speaker]
+--
+* Merci, questions ?
+--
